Add sun awt libraries for linux dist